fixed layout issues, trying to fix dist build

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -16,10 +16,3 @@ body {
 ul {
   padding-left: 1.3em;
 }
-
-/* TODO:!!! */
-@media (max-width: 600px) {
-  #mainContainer {
-    top: 100px !important;
-  }
-}
